--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,14 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="main-header navbar navbar-expand-lg bg-dark bg-body-tertiary" data-bs-theme="dark">
 	<div class="container-fluid">
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-				aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand"  data-widget="pushmenu" href="#" role="button">TEST</a>
+
+		<button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+
+		<div class="collapse navbar-collapse" [ngbCollapse]="isMenuCollapsed" id="collapsibleNavbar">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" routerLink="login">Home</a>
+					<a class="nav-link active" aria-current="page" routerLink="login">{{ 'HOME' | translate }}</a>
 				</li>
+			</ul>
+			<ul class="navbar-nav ms-auto">
 				<li class="nav-item">
 					<a class="nav-link" routerLink="login" *ngIf="!loggedIn">Login</a>
 				</li>
@@ -21,12 +25,10 @@
 				<li class="nav-item">
 					<a class="nav-link" routerLink="profile" *ngIf="loggedIn">Profile</a>
 				</li>
-
 				<li class="nav-item">
 					<a class="nav-link" href="#" (click)="logout($event)" *ngIf="loggedIn">Logout</a>
 				</li>
 			</ul>
-
 		</div>
 	</div>
 </nav>
