--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container my-3">
-	<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
+<app-toast></app-toast>
+<app-theme></app-theme>
