Add form validation to the forgot password button

--- a/src/app/resources/views/auth/forgot-password/forgot-password.component.html
+++ b/src/app/resources/views/auth/forgot-password/forgot-password.component.html
@@ -14,7 +14,7 @@
                             </div>
                         </div>
 
-                        <button class="btn btn-border btn-primary w-100 py-2" type="submit">{{'sendPasswordResetLink' | translate}}</button>
+                        <button [disabled]="!formForgotPassword.valid" class="btn btn-border btn-primary w-100 py-2" type="submit">{{'sendPasswordResetLink' | translate}}</button>
                     </form>
                 </div>
             </div>
