Add error handling for email input in forgot password component

--- a/src/app/resources/views/auth/forgot-password/forgot-password.component.html
+++ b/src/app/resources/views/auth/forgot-password/forgot-password.component.html
@@ -10,7 +10,10 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                                <input type="email" class="form-control" id="email" name="email" formControlName="email" autocomplete="email" placeholder="{{'email' | translate}}">
+                                <input type="email" class="form-control" [ngClass]="{'is-invalid': errorMessages['email']}" id="email" name="email" formControlName="email" autocomplete="email" placeholder="{{'email' | translate}}">
+                                <div class="invalid-feedback">
+									{{ errorMessages['email'] }}
+								</div>
                             </div>
                         </div>
 
