--- a/src/app/resources/views/auth/forgot-password/forgot-password.component.html
+++ b/src/app/resources/views/auth/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4">
             <div class="card border shadow">
                 <div class="card-header border-0">
-                    <p class="mb-0">{{'resetpassword' | translate}}</p>
+                    <p class="mb-0">{{'resetPassword' | translate}}</p>
                 </div>
                 <div class="card-body">
                     <form class="mb-4" [formGroup]="formForgotPassword" (ngSubmit)="onSubmit()">
