--- a/src/app/resources/views/auth/login/login.component.html
+++ b/src/app/resources/views/auth/login/login.component.html
@@ -3,8 +3,8 @@
         <div class="col-md-4">
             <div class="card border shadow">
                 <div class="card-header border-0">
-                    <h3>{{'welcomeback' | translate}}</h3>
-                    <p class="mb-0">{{'pleaselogin' | translate}}</p>
+                    <h3>{{'welcomeBack' | translate}}</h3>
+                    <p class="mb-0">{{'pleaseLogin' | translate}}</p>
                 </div>
                 <div class="card-body">
                     <form class="mb-4" [formGroup]="formUser" (ngSubmit)="onSubmit()">
@@ -31,14 +31,14 @@
                         <div class="d-flex justify-content-between my-4">
                             <div class="form-check text-start">
                                 <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">{{'rememberme' | translate}}</label>
+                                <label class="form-check-label" for="flexCheckDefault">{{'rememberMe' | translate}}</label>
                             </div>
-                            <a routerLink="/auth/forgot-password" class="text-decoration-none">{{'forgotpassword' | translate}}</a>
+                            <a routerLink="/auth/forgot-password" class="text-decoration-none">{{'forgotPassword' | translate}}</a>
                         </div>
 
                         <button [disabled]="!formUser.valid" class="btn btn-border btn-primary w-50 py-2" type="submit">{{'login' | translate}}</button>
                     </form>
-                    <p><span class="fw-light me-2">{{'donthaveaccount' | translate}}</span> <a class="fw-bolder text-decoration-none" routerLink="/auth/register">{{'registerHere' | translate}}</a></p>
+                    <p><span class="fw-light me-2">{{'dontHaveAccount' | translate}}</span> <a class="fw-bolder text-decoration-none" routerLink="/auth/register">{{'registerHere' | translate}}</a></p>
                 </div>
             </div>
         </div>
