Actualizar traducción de alreadyAccount en register.component.html

--- a/src/app/resources/views/auth/register/register.component.html
+++ b/src/app/resources/views/auth/register/register.component.html
@@ -41,7 +41,7 @@
                                     <input type="password" class="form-control" id="password" formControlName="password" name="password" autocomplete="new-password" placeholder="{{'password' | translate}}">
                                 </div>
                             </div>
-    
+
                             <div class="col-md-6 mb-4">
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="bi bi-lock"></i></span>
@@ -72,7 +72,7 @@
                         <p class="mb-0">{{'ByRegistering' | translate}} <a href="#">{{'termsOfService' | translate}}</a> {{'and' | translate}} <a href="#">{{'privacyPolicy' | translate}}</a>.</p>
                     </div>
 
-                    <p><span class="fw-light me-2">{{'alreadyaccount' | translate}}</span> <a class="fw-bolder text-decoration-none" routerLink="/auth/login">{{'loginHere' | translate}}</a></p>
+                    <p><span class="fw-light me-2">{{'alreadyAccount' | translate}}</span> <a class="fw-bolder text-decoration-none" routerLink="/auth/login">{{'loginHere' | translate}}</a></p>
                 </div>
             </div>
         </div>
