--- a/src/app/resources/views/shared/navbar/navbar.component.html
+++ b/src/app/resources/views/shared/navbar/navbar.component.html
@@ -18,8 +18,8 @@
 				<li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
 					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownLang" role="button"> <i class="bi bi-translate"></i></a>
 					<div ngbDropdownMenu aria-labelledby="navbarDropdownLang" class="dropdown-menu">
-						<a *ngFor="let language of translate.getLangs()" ngbDropdownItem href="#" (click)="switchLanguage(language, $event)">
-							{{ language }}
+						<a *ngFor="let language of availableLangNavbarArray" ngbDropdownItem href="#" (click)="switchLanguage(language.key, $event)">
+							{{ language.name }}
 						</a>
 					</div>
 				</li>
