--- a/src/app/resources/views/auth/login/login.component.html
+++ b/src/app/resources/views/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="auth-body">
     <div class="row w-100 m-auto justify-content-center">
-        <div class="col-md-4">
+        <div class="col-auto col-sm-10 col-md-8 col-lg-6 col-xl-4">
             <div class="card border shadow">
                 <div class="card-header border-0">
                     <h3>{{'welcomeBack' | translate}}</h3>
@@ -28,13 +28,13 @@
                             </div>
                         </div>
 
-                        <div class="d-flex justify-content-between my-4">
-                            <div class="form-check text-start">
-                                <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">{{'rememberMe' | translate}}</label>
-                            </div>
-                            <a routerLink="/auth/forgot-password" class="text-decoration-none">{{'forgotPassword' | translate}}</a>
-                        </div>
+	                    <div class="d-flex flex-column flex-sm-row flex-wrap justify-content-between my-4">
+		                    <div class="form-check text-start mb-2 mb-sm-0">
+			                    <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+			                    <label class="form-check-label" for="flexCheckDefault">{{'rememberMe' | translate}}</label>
+		                    </div>
+		                    <a routerLink="/auth/forgot-password" class="text-decoration-none">{{'forgotPassword' | translate}}</a>
+	                    </div>
 
                         <button [disabled]="!formUser.valid" class="btn btn-border btn-primary w-50 py-2" type="submit">{{'login' | translate}}</button>
                     </form>
