Actualizar componente de la barra de navegación en navbar.component.html

--- a/src/app/resources/views/shared/navbar/navbar.component.html
+++ b/src/app/resources/views/shared/navbar/navbar.component.html
@@ -24,18 +24,24 @@
 					</div>
 				</li>
 
+				@if (loggedIn){
+					<li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
+						<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownTheme" role="button"> <i class="bi bi-person-circle"></i></a>
+						<div ngbDropdownMenu aria-labelledby="navbarDropdownTheme" class="dropdown-menu">
+							<a class="dropdown-item" href="#">{{'profile' | translate}}</a>
+							<a class="dropdown-item" href="#">{{'settings' | translate}}</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#" (click)="logout($event)">{{'logout' | translate}}</a>
+						</div>
+					</li>
+				}
+
 				@if(!loggedIn){
 					<li class="nav-item">
 						<a class="nav-link" routerLink="auth/login">{{'login' | translate}}</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" routerLink="auth/register">{{'register' | translate}}</a>
-					</li>
-				}
-
-				@if(loggedIn){
-					<li class="nav-item">
-						<a class="nav-link" href="#" (click)="logout($event)">{{'logout' | translate}}</a>
 					</li>
 				}
 			</ul>
