Actualizar traducciones de bienvenida en en.json y es.json

--- a/src/app/resources/views/auth/register/register.component.html
+++ b/src/app/resources/views/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="py-4 auth-body">
     <div class="row w-100 m-auto justify-content-center">
-        <div class="col-md-4">
+        <div class="col-auto col-sm-10 col-md-8 col-lg-6 col-xl-4">
             <div class="card border shadow">
                 <div class="card-header border-0">
                     <p class="mb-0">{{"registerHere" | translate}}</p>
@@ -54,7 +54,7 @@
                     </form>
 
                     <div class="mb-3">
-                        <p class="text-center">- {{'orSinInWith' | translate}} -</p>
+                        <p class="text-center">- {{'orRegisterWith' | translate}} -</p>
                         <div class="d-flex justify-content-between">
                             <button class="btn btn-border btn-outline-primary w-100 py-2 me-2" type="button">
                                 <i class="bi bi-facebook"></i>
