--- a/src/styles.css
+++ b/src/styles.css
@@ -47,3 +47,10 @@
 .btn-border:hover:after {
     border: 2px solid #212529;
 }
+
+.img-profile {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	object-fit: cover;
+}
