--- a/src/app/resources/views/account/profile/profile.component.html
+++ b/src/app/resources/views/account/profile/profile.component.html
@@ -17,13 +17,19 @@
 							<div class="col-md-6 mb-3">
 								<div class="input-group">
 									<span class="input-group-text"><i class="bi bi-person"></i></span>
-									<input type="text" class="form-control" id="first_name" formControlName="first_name" name="first_name" placeholder="{{'firstName' | translate}}">
+									<input type="text" class="form-control" id="first_name" [ngClass]="{'is-invalid': errorMessages['first_name']}" formControlName="first_name" name="first_name" placeholder="{{'firstName' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['first_name'] }}
+									</div>
 								</div>
 							</div>
 							<div class="col-md-6 mb-3">
 								<div class="input-group">
 									<span class="input-group-text"><i class="bi bi-person"></i></span>
-									<input type="text" class="form-control" id="last_name" formControlName="last_name" name="last_name" placeholder="{{'lastName' | translate}}">
+									<input type="text" class="form-control" id="last_name" [ngClass]="{'is-invalid': errorMessages['last_name']}" formControlName="last_name" name="last_name" placeholder="{{'lastName' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['last_name'] }}
+									</div>
 								</div>
 							</div>
 						</div>
@@ -31,7 +37,10 @@
 							<div class="col-md-6 mb-3">
 								<div class="input-group">
 									<span class="input-group-text"><i class="bi bi-envelope"></i></span>
-									<input type="email" class="form-control" id="email" formControlName="email" name="email" autocomplete="email" placeholder="{{'email' | translate}}">
+									<input type="email" class="form-control" id="email" [ngClass]="{'is-invalid': errorMessages['email']}" formControlName="email" name="email" autocomplete="email" placeholder="{{'email' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['email'] }}
+									</div>
 								</div>
 							</div>
 							<div class="col-md-6 mb-3">
@@ -47,9 +56,13 @@
 						<div class="mb-3">
 							<div class="input-group mb-3">
 								<label for="avatarFile" class="input-group-text"><i class="bi bi-cloud-upload-fill"></i></label>
-								<input type="file" class="form-control" id="avatarFile" (change)="onFileSelected($event)" [accept]="allowedTypes">
+								<input type="file" class="form-control" id="avatarFile" #avatarFile (change)="onFileSelected($event)" [accept]="allowedTypes">
+								<div class="invalid-feedback">
+									{{ errorMessages['avatar'] }}
+								</div>
 							</div>
 						</div>
+
 						<button type="submit" class="btn btn-primary">{{'update' | translate}}</button>
 					</form>
 				</div>
