--- a/src/app/resources/components/toast/toast.component.html
+++ b/src/app/resources/components/toast/toast.component.html
@@ -1,5 +1,5 @@
 @for (toast of toastService.toasts; track toast) {
-    <ngb-toast [class]="toast.classname" [autohide]="true" [delay]="toast.delay || 5000" (hidden)="toastService.remove(toast)">
+    <ngb-toast [class]="toast.className" [autohide]="true" [delay]="toast.delay || 5000" (hidden)="toastService.remove(toast)">
         {{toast.message}}
     </ngb-toast>
 }
