--- a/src/app/resources/views/account/change-password/change-password.component.html
+++ b/src/app/resources/views/account/change-password/change-password.component.html
@@ -6,26 +6,45 @@
 		<div class="col-md-8">
 			<div class="card">
 				<div class="card-header">
-					<h5 class="card-title">Change my password</h5>
+					<h5 class="card-title">{{'changePassword' | translate}}</h5>
 				</div>
 				<div class="card-body">
-					<form>
+					<form [formGroup]="formChangePassword" (ngSubmit)="onSubmit()">
 						<div class="row">
-							<div class="col-md-6 mb-4">
-								<div class="input-group">
+							<div class="col-md-6">
+								<div class="input-group mb-3">
 									<span class="input-group-text"><i class="bi bi-lock"></i></span>
-									<input type="password" class="form-control" id="password" formControlName="password" name="password" autocomplete="new-password" placeholder="{{'password' | translate}}">
-								</div>
-							</div>
-
-							<div class="col-md-6 mb-4">
-								<div class="input-group">
-									<span class="input-group-text"><i class="bi bi-lock"></i></span>
-									<input type="password" class="form-control" id="password_confirmation" formControlName="password_confirmation" name="password_confirmation" autocomplete="new-password" placeholder="{{'confirmPassword' | translate}}">
+									<input type="password" class="form-control" id="current_password" [ngClass]="{'is-invalid': errorMessages['current_password']}" formControlName="current_password" name="current_password" autocomplete="new-password" placeholder="{{'currentPassword' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['current_password'] }}
+									</div>
 								</div>
 							</div>
 						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<hr class="mt-0">
+						<div class="row">
+							<div class="col-md-6 mb-3">
+								<div class="input-group mb-3">
+									<span class="input-group-text"><i class="bi bi-lock"></i></span>
+									<input type="password" class="form-control" id="password" [ngClass]="{'is-invalid': errorMessages['password']}" formControlName="password" name="password" autocomplete="new-password" placeholder="{{'newPassword' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['password'] }}
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 mb-3">
+								<div class="input-group mb-3">
+									<span class="input-group-text"><i class="bi bi-lock"></i></span>
+									<input type="password" class="form-control" id="password_confirmation" [ngClass]="{'is-invalid': errorMessages['password_confirmation']}" formControlName="password_confirmation" name="password_confirmation" autocomplete="new-password" placeholder="{{'confirmPassword' | translate}}">
+									<div class="invalid-feedback">
+										{{ errorMessages['password_confirmation'] }}
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<button type="submit" class="btn btn-primary">{{'update' | translate}}</button>
 					</form>
 				</div>
 			</div>
