--- a/src/app/resources/views/account/device-connected/device-connected.component.html
+++ b/src/app/resources/views/account/device-connected/device-connected.component.html
@@ -6,7 +6,7 @@
 		<div class="col-md-8">
 			<div class="card">
 				<div class="card-header d-flex justify-content-between">
-					<p class="mb-0">Dispositivo conectado</p>
+					<p class="mb-0">{{'devicesConnected' | translate}}</p>
 					<p class="mb-0">
 						<button class="btn btn-sm btn-danger">Cerrar sesión</button>
 					</p>
