Actualizar componente de perfil de cuenta con traducciones y mejoras en la interfaz de usuario

--- a/src/app/resources/views/account/profile/profile.component.html
+++ b/src/app/resources/views/account/profile/profile.component.html
@@ -6,7 +6,7 @@
 		<div class="col-md-8">
 			<div class="card">
 				<div class="card-header">
-					<h5 class="card-title">Account</h5>
+					<h5 class="card-title">{{'profile' | translate}}</h5>
 				</div>
 				<div class="card-body">
 					<p class="text-center mb-4">
