--- a/src/app/resources/views/account/device-connected/device-connected.component.html
+++ b/src/app/resources/views/account/device-connected/device-connected.component.html
@@ -1,16 +1,16 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4 mb-3">
 			<app-account-menu-list></app-account-menu-list>
 		</div>
 		<div class="col-md-8">
 			<div class="row">
 				<div class="col-md-6" *ngFor="let device of devices?.data">
 					<div class="card mb-4">
-						<div class="card-header d-flex justify-content-between">
+						<div class="card-header d-flex justify-content-between align-items-center">
 							<p class="mb-0">{{device.login_at}}</p>
 							<p class="mb-0">
-								<button class="btn btn-sm btn-danger" value="{{device.id}}" (click)="logoutDevice(device.id)">Cerrar sesión</button>
+								<button class="btn btn-sm btn-danger" value="{{device.id}}" (click)="openConfirmationModal(device.id)">{{'logout' | translate}} <i class="bi bi-trash"></i></button>
 							</p>
 						</div>
 						<div class="card-body" >
