--- a/src/app/resources/views/account/profile/profile.component.html
+++ b/src/app/resources/views/account/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4 mb-3">
 			<app-account-menu-list></app-account-menu-list>
 		</div>
 		<div class="col-md-8">
