--- a/src/app/resources/views/account/account-menu-list/account-menu-list.component.html
+++ b/src/app/resources/views/account/account-menu-list/account-menu-list.component.html
@@ -8,4 +8,7 @@
 	<a routerLink="/account/device-connected" routerLinkActive="active" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
 		{{'devicesConnected' | translate}} <i class="bi bi-phone"></i>
 	</a>
+	<a routerLink="/account/delete-account" routerLinkActive="active" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+		{{'deleteAccount' | translate}} <i class="bi bi-trash"></i>
+	</a>
 </div>
