--- a/src/app/resources/views/account/device-connected/device-connected.component.html
+++ b/src/app/resources/views/account/device-connected/device-connected.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-md-8">
 			<div class="row">
-				<div class="col-md-6" *ngFor="let device of devices?.data">
+				<div class="col-md-6" *ngFor="let device of devices">
 					<div class="card mb-4">
 						<div class="card-header d-flex justify-content-between align-items-center">
 							<p class="mb-0">{{device.login_at}}</p>
