--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,2 +1,3 @@
-@import "bootstrap/dist/css/bootstrap.css";
+@import "custom.css";
+@import "vali.css";
 @import "bootstrap-icons/font/bootstrap-icons.css";
