Actualizar diseño de la barra de navegación y agregar barra lateral

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-navbar></app-navbar>
-<div class="container my-3">
-    <router-outlet></router-outlet>
-</div>
+<app-sidebar></app-sidebar>
+
+<main class="app-content">
+	<router-outlet></router-outlet>
+</main>
+
 <app-toast></app-toast>
 <app-theme></app-theme>
