--- a/src/app/resources/views/shared/navbar/navbar.component.html
+++ b/src/app/resources/views/shared/navbar/navbar.component.html
@@ -1,49 +1,34 @@
-<nav class="main-header navbar navbar-expand-lg bg-primary-subtle">
-	<div class="container-fluid">
-		<a class="navbar-brand" data-widget="pushmenu" href="#" role="button">{{ appName }}</a>
-		<button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed"
-			data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" [ngbCollapse]="isMenuCollapsed" id="collapsibleNavbar">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                @if (loggedIn){
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" routerLink="auth/login">{{'home' | translate}}</a>
-                    </li>
-                }
-			</ul>
-			<ul class="navbar-nav ms-auto">
-				<li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
-					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownLang" role="button"> <i class="bi bi-translate"></i></a>
-					<div ngbDropdownMenu aria-labelledby="navbarDropdownLang" class="dropdown-menu">
-						<a *ngFor="let language of availableLangNavbarArray" ngbDropdownItem href="#" (click)="switchLanguage(language.key, $event)">
-							{{ language.name }}
-						</a>
-					</div>
-				</li>
+<header class="app-header">
+	<a class="app-header__logo" href="index.html">{{ appName }}</a>
+	<span class="app-sidebar__toggle p-cursor" data-toggle="sidebar" href="#" (click)="toggleMenu()" aria-label="Hide Sidebar"></span>
 
-				@if (loggedIn){
-					<li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
-						<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownTheme" role="button"> <i class="bi bi-person-circle"></i></a>
-						<div ngbDropdownMenu aria-labelledby="navbarDropdownTheme" class="dropdown-menu">
-							<a class="dropdown-item" routerLink="account/profile">{{'profile' | translate}}</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#" (click)="logout($event)">{{'logout' | translate}}</a>
-						</div>
-					</li>
-				}
+	<ul class="app-nav">
+		<li class="dropdown" ngbDropdown display="dynamic" placement="bottom-end">
+			<a class="app-nav__item" tabindex="0" ngbDropdownToggle id="navbarDropdownLang" role="button"> <i class="bi bi-translate"></i></a>
+			<div ngbDropdownMenu aria-labelledby="navbarDropdownLang" class="dropdown-menu dropdown-menu-right">
+				<a *ngFor="let language of availableLangNavbarArray" ngbDropdownItem href="#" (click)="switchLanguage(language.key, $event)">
+					{{ language.name }}
+				</a>
+			</div>
+		</li>
 
-				@if(!loggedIn){
-					<li class="nav-item">
-						<a class="nav-link" routerLink="auth/login">{{'login' | translate}}</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" routerLink="auth/register">{{'register' | translate}}</a>
-					</li>
-				}
-			</ul>
-		</div>
-	</div>
-</nav>
+		@if (loggedIn){
+			<li class="dropdown" ngbDropdown display="dynamic" placement="bottom-end">
+				<a class="app-nav__item" tabindex="0" ngbDropdownToggle id="navbarDropdownTheme" role="button"> <i class="bi bi-person-circle"></i></a>
+				<div ngbDropdownMenu aria-labelledby="navbarDropdownTheme" class="dropdown-menu">
+					<a class="dropdown-item" routerLink="account/profile">{{'profile' | translate}}</a>
+					<a class="dropdown-item" href="#" (click)="logout($event)">{{'logout' | translate}}</a>
+				</div>
+			</li>
+		}
+
+		@if(!loggedIn){
+			<li class="dropdown">
+				<a class="app-nav__item" routerLink="auth/login">{{'login' | translate}}</a>
+			</li>
+			<li class="dropdown">
+				<a class="app-nav__item" routerLink="auth/register">{{'register' | translate}}</a>
+			</li>
+		}
+	</ul>
+</header>
