Actualizar diseño de la barra de navegación y agregar barra lateral

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
+<main [ngClass]="{'app sidebar-mini': loggedIn}">
+	<app-navbar></app-navbar>
 
-<main class="app-content">
-	<router-outlet></router-outlet>
+	@if(loggedIn){
+		<app-sidebar></app-sidebar>
+	}
+
+	<div [ngClass]="{'app-content': loggedIn, 'container': !loggedIn}">
+		<router-outlet></router-outlet>
+	</div>
+
+	<app-toast></app-toast>
+	<app-theme></app-theme>
 </main>
-
-<app-toast></app-toast>
-<app-theme></app-theme>
