--- a/src/assets/css/vali.css
+++ b/src/assets/css/vali.css
@@ -24,7 +24,7 @@
 	--bs-teal: #20c997;
 	--bs-cyan: #0dcaf0;
 	--bs-black: #000;
-	--bs-white: #FFF;
+	--bs-white: #fff;
 	--bs-gray: #6c757d;
 	--bs-gray-dark: #343a40;
 	--bs-gray-100: #f8f9fa;
@@ -36,7 +36,7 @@
 	--bs-gray-700: #495057;
 	--bs-gray-800: #343a40;
 	--bs-gray-900: #212529;
-	--bs-primary: #00695C;
+	--bs-primary: #0d6efd;
 	--bs-secondary: #6c757d;
 	--bs-success: #198754;
 	--bs-info: #0dcaf0;
@@ -44,7 +44,7 @@
 	--bs-danger: #dc3545;
 	--bs-light: #f8f9fa;
 	--bs-dark: #212529;
-	--bs-primary-rgb: 0, 105, 92;
+	--bs-primary-rgb: 13, 110, 253;
 	--bs-secondary-rgb: 108, 117, 125;
 	--bs-success-rgb: 25, 135, 84;
 	--bs-info-rgb: 13, 202, 240;
@@ -52,7 +52,7 @@
 	--bs-danger-rgb: 220, 53, 69;
 	--bs-light-rgb: 248, 249, 250;
 	--bs-dark-rgb: 33, 37, 41;
-	--bs-primary-text-emphasis: #002a25;
+	--bs-primary-text-emphasis: #052c65;
 	--bs-secondary-text-emphasis: #2b2f32;
 	--bs-success-text-emphasis: #0a3622;
 	--bs-info-text-emphasis: #055160;
@@ -60,7 +60,7 @@
 	--bs-danger-text-emphasis: #58151c;
 	--bs-light-text-emphasis: #495057;
 	--bs-dark-text-emphasis: #495057;
-	--bs-primary-bg-subtle: #cce1de;
+	--bs-primary-bg-subtle: #cfe2ff;
 	--bs-secondary-bg-subtle: #e2e3e5;
 	--bs-success-bg-subtle: #d1e7dd;
 	--bs-info-bg-subtle: #cff4fc;
@@ -68,7 +68,7 @@
 	--bs-danger-bg-subtle: #f8d7da;
 	--bs-light-bg-subtle: #fcfcfd;
 	--bs-dark-bg-subtle: #ced4da;
-	--bs-primary-border-subtle: #99c3be;
+	--bs-primary-border-subtle: #9ec5fe;
 	--bs-secondary-border-subtle: #c4c8cb;
 	--bs-success-border-subtle: #a3cfbb;
 	--bs-info-border-subtle: #9eeaf9;
@@ -87,7 +87,7 @@
 	--bs-body-line-height: 1.5;
 	--bs-body-color: #212529;
 	--bs-body-color-rgb: 33, 37, 41;
-	--bs-body-bg: #FFF;
+	--bs-body-bg: #fff;
 	--bs-body-bg-rgb: 255, 255, 255;
 	--bs-emphasis-color: #000;
 	--bs-emphasis-color-rgb: 0, 0, 0;
@@ -100,11 +100,11 @@
 	--bs-tertiary-bg: #f8f9fa;
 	--bs-tertiary-bg-rgb: 248, 249, 250;
 	--bs-heading-color: inherit;
-	--bs-link-color: #00695C;
-	--bs-link-color-rgb: 0, 105, 92;
+	--bs-link-color: #0d6efd;
+	--bs-link-color-rgb: 13, 110, 253;
 	--bs-link-decoration: underline;
-	--bs-link-hover-color: #00544a;
-	--bs-link-hover-color-rgb: 0, 84, 74;
+	--bs-link-hover-color: #0a58ca;
+	--bs-link-hover-color-rgb: 10, 88, 202;
 	--bs-code-color: #d63384;
 	--bs-highlight-color: #212529;
 	--bs-highlight-bg: #fff3cd;
@@ -125,7 +125,7 @@
 	--bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
 	--bs-focus-ring-width: 0.25rem;
 	--bs-focus-ring-opacity: 0.25;
-	--bs-focus-ring-color: rgba(0, 105, 92, 0.25);
+	--bs-focus-ring-color: rgba(13, 110, 253, 0.25);
 	--bs-form-valid-color: #198754;
 	--bs-form-valid-border-color: #198754;
 	--bs-form-invalid-color: #dc3545;
@@ -133,11 +133,12 @@
 }
 
 [data-bs-theme=dark] {
+	color-scheme: dark;
 	--bs-body-color: #dee2e6;
 	--bs-body-color-rgb: 222, 226, 230;
 	--bs-body-bg: #212529;
 	--bs-body-bg-rgb: 33, 37, 41;
-	--bs-emphasis-color: #FFF;
+	--bs-emphasis-color: #fff;
 	--bs-emphasis-color-rgb: 255, 255, 255;
 	--bs-secondary-color: rgba(222, 226, 230, 0.75);
 	--bs-secondary-color-rgb: 222, 226, 230;
@@ -147,7 +148,7 @@
 	--bs-tertiary-color-rgb: 222, 226, 230;
 	--bs-tertiary-bg: #2b3035;
 	--bs-tertiary-bg-rgb: 43, 48, 53;
-	--bs-primary-text-emphasis: #66a59d;
+	--bs-primary-text-emphasis: #6ea8fe;
 	--bs-secondary-text-emphasis: #a7acb1;
 	--bs-success-text-emphasis: #75b798;
 	--bs-info-text-emphasis: #6edff6;
@@ -155,7 +156,7 @@
 	--bs-danger-text-emphasis: #ea868f;
 	--bs-light-text-emphasis: #f8f9fa;
 	--bs-dark-text-emphasis: #dee2e6;
-	--bs-primary-bg-subtle: #001512;
+	--bs-primary-bg-subtle: #031633;
 	--bs-secondary-bg-subtle: #161719;
 	--bs-success-bg-subtle: #051b11;
 	--bs-info-bg-subtle: #032830;
@@ -163,7 +164,7 @@
 	--bs-danger-bg-subtle: #2c0b0e;
 	--bs-light-bg-subtle: #343a40;
 	--bs-dark-bg-subtle: #1a1d20;
-	--bs-primary-border-subtle: #003f37;
+	--bs-primary-border-subtle: #084298;
 	--bs-secondary-border-subtle: #41464b;
 	--bs-success-border-subtle: #0f5132;
 	--bs-info-border-subtle: #087990;
@@ -172,10 +173,10 @@
 	--bs-light-border-subtle: #495057;
 	--bs-dark-border-subtle: #343a40;
 	--bs-heading-color: inherit;
-	--bs-link-color: #66a59d;
-	--bs-link-hover-color: #85b7b1;
-	--bs-link-color-rgb: 102, 165, 157;
-	--bs-link-hover-color-rgb: 133, 183, 177;
+	--bs-link-color: #6ea8fe;
+	--bs-link-hover-color: #8bb9fe;
+	--bs-link-color-rgb: 110, 168, 254;
+	--bs-link-hover-color-rgb: 139, 185, 254;
 	--bs-code-color: #e685b5;
 	--bs-highlight-color: #dee2e6;
 	--bs-highlight-bg: #664d03;
@@ -3845,52 +3846,52 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-	--bs-btn-color: #FFF;
-	--bs-btn-bg: #00695C;
-	--bs-btn-border-color: #00695C;
-	--bs-btn-hover-color: #FFF;
-	--bs-btn-hover-bg: #00594e;
-	--bs-btn-hover-border-color: #00544a;
-	--bs-btn-focus-shadow-rgb: 38, 128, 116;
-	--bs-btn-active-color: #FFF;
-	--bs-btn-active-bg: #00544a;
-	--bs-btn-active-border-color: #004f45;
+	--bs-btn-color: #fff;
+	--bs-btn-bg: #0d6efd;
+	--bs-btn-border-color: #0d6efd;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #0b5ed7;
+	--bs-btn-hover-border-color: #0a58ca;
+	--bs-btn-focus-shadow-rgb: 49, 132, 253;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #0a58ca;
+	--bs-btn-active-border-color: #0a53be;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #FFF;
-	--bs-btn-disabled-bg: #00695C;
-	--bs-btn-disabled-border-color: #00695C;
+	--bs-btn-disabled-color: #fff;
+	--bs-btn-disabled-bg: #0d6efd;
+	--bs-btn-disabled-border-color: #0d6efd;
 }
 
 .btn-secondary {
-	--bs-btn-color: #FFF;
+	--bs-btn-color: #fff;
 	--bs-btn-bg: #6c757d;
 	--bs-btn-border-color: #6c757d;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #5c636a;
 	--bs-btn-hover-border-color: #565e64;
 	--bs-btn-focus-shadow-rgb: 130, 138, 145;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #565e64;
 	--bs-btn-active-border-color: #51585e;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #FFF;
+	--bs-btn-disabled-color: #fff;
 	--bs-btn-disabled-bg: #6c757d;
 	--bs-btn-disabled-border-color: #6c757d;
 }
 
 .btn-success {
-	--bs-btn-color: #FFF;
+	--bs-btn-color: #fff;
 	--bs-btn-bg: #198754;
 	--bs-btn-border-color: #198754;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #157347;
 	--bs-btn-hover-border-color: #146c43;
 	--bs-btn-focus-shadow-rgb: 60, 153, 110;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #146c43;
 	--bs-btn-active-border-color: #13653f;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #FFF;
+	--bs-btn-disabled-color: #fff;
 	--bs-btn-disabled-bg: #198754;
 	--bs-btn-disabled-border-color: #198754;
 }
@@ -3930,18 +3931,18 @@ fieldset:disabled .btn {
 }
 
 .btn-danger {
-	--bs-btn-color: #FFF;
+	--bs-btn-color: #fff;
 	--bs-btn-bg: #dc3545;
 	--bs-btn-border-color: #dc3545;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #bb2d3b;
 	--bs-btn-hover-border-color: #b02a37;
 	--bs-btn-focus-shadow-rgb: 225, 83, 97;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #b02a37;
 	--bs-btn-active-border-color: #a52834;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #FFF;
+	--bs-btn-disabled-color: #fff;
 	--bs-btn-disabled-bg: #dc3545;
 	--bs-btn-disabled-border-color: #dc3545;
 }
@@ -3964,47 +3965,47 @@ fieldset:disabled .btn {
 }
 
 .btn-dark {
-	--bs-btn-color: #FFF;
+	--bs-btn-color: #fff;
 	--bs-btn-bg: #212529;
 	--bs-btn-border-color: #212529;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #424649;
 	--bs-btn-hover-border-color: #373b3e;
 	--bs-btn-focus-shadow-rgb: 66, 70, 73;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #4d5154;
 	--bs-btn-active-border-color: #373b3e;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #FFF;
+	--bs-btn-disabled-color: #fff;
 	--bs-btn-disabled-bg: #212529;
 	--bs-btn-disabled-border-color: #212529;
 }
 
 .btn-outline-primary {
-	--bs-btn-color: #00695C;
-	--bs-btn-border-color: #00695C;
-	--bs-btn-hover-color: #FFF;
-	--bs-btn-hover-bg: #00695C;
-	--bs-btn-hover-border-color: #00695C;
-	--bs-btn-focus-shadow-rgb: 0, 105, 92;
-	--bs-btn-active-color: #FFF;
-	--bs-btn-active-bg: #00695C;
-	--bs-btn-active-border-color: #00695C;
+	--bs-btn-color: #0d6efd;
+	--bs-btn-border-color: #0d6efd;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #0d6efd;
+	--bs-btn-hover-border-color: #0d6efd;
+	--bs-btn-focus-shadow-rgb: 13, 110, 253;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #0d6efd;
+	--bs-btn-active-border-color: #0d6efd;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #00695C;
+	--bs-btn-disabled-color: #0d6efd;
 	--bs-btn-disabled-bg: transparent;
-	--bs-btn-disabled-border-color: #00695C;
+	--bs-btn-disabled-border-color: #0d6efd;
 	--bs-gradient: none;
 }
 
 .btn-outline-secondary {
 	--bs-btn-color: #6c757d;
 	--bs-btn-border-color: #6c757d;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #6c757d;
 	--bs-btn-hover-border-color: #6c757d;
 	--bs-btn-focus-shadow-rgb: 108, 117, 125;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #6c757d;
 	--bs-btn-active-border-color: #6c757d;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -4017,11 +4018,11 @@ fieldset:disabled .btn {
 .btn-outline-success {
 	--bs-btn-color: #198754;
 	--bs-btn-border-color: #198754;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #198754;
 	--bs-btn-hover-border-color: #198754;
 	--bs-btn-focus-shadow-rgb: 25, 135, 84;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #198754;
 	--bs-btn-active-border-color: #198754;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -4068,11 +4069,11 @@ fieldset:disabled .btn {
 .btn-outline-danger {
 	--bs-btn-color: #dc3545;
 	--bs-btn-border-color: #dc3545;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #dc3545;
 	--bs-btn-hover-border-color: #dc3545;
 	--bs-btn-focus-shadow-rgb: 220, 53, 69;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #dc3545;
 	--bs-btn-active-border-color: #dc3545;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -4102,11 +4103,11 @@ fieldset:disabled .btn {
 .btn-outline-dark {
 	--bs-btn-color: #212529;
 	--bs-btn-border-color: #212529;
-	--bs-btn-hover-color: #FFF;
+	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #212529;
 	--bs-btn-hover-border-color: #212529;
 	--bs-btn-focus-shadow-rgb: 33, 37, 41;
-	--bs-btn-active-color: #FFF;
+	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #212529;
 	--bs-btn-active-border-color: #212529;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -4128,7 +4129,7 @@ fieldset:disabled .btn {
 	--bs-btn-disabled-color: #6c757d;
 	--bs-btn-disabled-border-color: transparent;
 	--bs-btn-box-shadow: 0 0 0 #000;
-	--bs-btn-focus-shadow-rgb: 38, 128, 116;
+	--bs-btn-focus-shadow-rgb: 49, 132, 253;
 	text-decoration: underline;
 }
 
@@ -4144,16 +4145,16 @@ fieldset:disabled .btn {
 .btn-group-lg>.btn {
 	--bs-btn-padding-y: 0.5rem;
 	--bs-btn-padding-x: 1rem;
-	--bs-btn-font-size: 1.09375rem;
-	--bs-btn-border-radius: 3px;
+	--bs-btn-font-size: 1.25rem;
+	--bs-btn-border-radius: var(--bs-border-radius-lg);
 }
 
 .btn-sm,
 .btn-group-sm>.btn {
 	--bs-btn-padding-y: 0.25rem;
 	--bs-btn-padding-x: 0.5rem;
-	--bs-btn-font-size: 0.765625rem;
-	--bs-btn-border-radius: 3px;
+	--bs-btn-font-size: 0.875rem;
+	--bs-btn-border-radius: var(--bs-border-radius-sm);
 }
 
 .fade {
