Actualizar formulario de edición de roles en editRol.component.html

--- a/src/app/resources/views/settings/roles/edit/editRol.component.html
+++ b/src/app/resources/views/settings/roles/edit/editRol.component.html
@@ -3,8 +3,8 @@
 		<p class="mb-0 fw-bold">Nuevo rol</p>
 		<a routerLink="/settings/roles" class="btn btn-secondary btn-sm">Regresar</a>
 	</div>
-	<div class="card-body">
-		<form [formGroup]="formRole">
+	<form [formGroup]="formRole" (ngSubmit)="updateRole()">
+		<div class="card-body">
 			<div class="mb-3">
 				<label for="name" class="form-label">Nombre de su nuevo rol</label>
 				<input type="text" class="form-control" id="name" name="name" [ngClass]="{'is-invalid': errorMessages['name']}" formControlName="name" required>
@@ -25,10 +25,10 @@
 					</div>
 				</div>
 			</div>
-		</form>
-	</div>
-	<div class="card-footer d-flex justify-content-end">
-		<a routerLink="/settings/roles" class="btn btn-secondary me-2">Cancelar</a>
-		<button class="btn btn-primary" (click)="updateRole()">Guardar</button>
-	</div>
+		</div>
+		<div class="card-footer d-flex justify-content-end">
+			<a routerLink="/settings/roles" class="btn btn-secondary me-2">Cancelar</a>
+			<button type="submit" class="btn btn-primary" >Guardar</button>
+		</div>
+	</form>
 </div>
