feat: Translate error message in forgot password component

--- a/src/app/resources/views/auth/forgot-password/forgot-password.component.html
+++ b/src/app/resources/views/auth/forgot-password/forgot-password.component.html
@@ -12,7 +12,7 @@
                                 <span class="input-group-text"><i class="bi bi-envelope"></i></span>
                                 <input type="email" class="form-control" [ngClass]="{'is-invalid': errorMessages['email']}" id="email" name="email" formControlName="email" autocomplete="email" placeholder="{{'email' | translate}}">
                                 <div class="invalid-feedback">
-									{{ errorMessages['email'] }}
+									{{ errorMessages['email'] | translate }}
 								</div>
                             </div>
                         </div>
