--- a/src/app/views/settings/roles/index/indexRol.component.html
+++ b/src/app/views/settings/roles/index/indexRol.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h4 class="card-title">Roles</h4>
-        <a class="btn btn-primary" routerLink="/settings/roles/create">{{'new' | translate}} <i class="bi bi-plus"></i></a>
+        <a *ngIf="permissions.hasPermission('roles:store')" class="btn btn-primary" routerLink="/settings/roles/create">{{'new' | translate}} <i class="bi bi-plus"></i></a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -19,10 +19,12 @@
                         <td>
                             <span *ngFor="let permission of role.permissions" class="badge bg-primary me-1">{{ permission.name }}</span>
                         </td>
-                        <td>
-                            <a class="btn btn-sm btn-primary me-2" routerLink="/settings/roles/edit/{{ role.id }}">{{'edit' | translate}} <i class="bi bi-pencil-square"></i></a>
-                            <button class="btn btn-sm btn-danger" (click)="deleteRole(role)">{{'delete' | translate}} <i class="bi bi-x"></i></button>
-                        </td>
+	                    <td>
+		                    <div class="d-flex flex-row align-items-center">
+			                    <a *ngIf="permissions.hasPermission('roles:update')" class="btn btn-sm btn-primary me-2" routerLink="/settings/roles/edit/{{ role.id }}">{{'edit' | translate}} <i class="bi bi-pencil-square"></i></a>
+			                    <button *ngIf="permissions.hasPermission('roles:delete')" class="btn btn-sm btn-danger" (click)="deleteRole(role)">{{'delete' | translate}} <i class="bi bi-x"></i></button>
+		                    </div>
+	                    </td>
                     </tr>
                 </tbody>
             </table>
