feat: Update translations for roles and permissions

--- a/src/app/views/settings/roles/index/indexRol.component.html
+++ b/src/app/views/settings/roles/index/indexRol.component.html
@@ -8,9 +8,9 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th>Role</th>
-                        <th>Permissions</th>
-                        <th>{{'actions' | translate }}</th>
+                        <th>{{'rol' | translate}}</th>
+                        <th>{{'permissions' | translate}}</th>
+                        <th>{{'actions' | translate}}</th>
                     </tr>
                 </thead>
                 <tbody>
