--- a/src/app/views/settings/users/edit/editUser.component.html
+++ b/src/app/views/settings/users/edit/editUser.component.html
@@ -62,7 +62,7 @@
 		</div>
 		<div class="card-footer d-flex justify-content-end align-items-center">
 			<a routerLink="/settings/users" class="btn btn-secondary me-2">{{ 'cancel' | translate }}</a>
-			<button type="submit" class="btn btn-primary">{{ 'update' | translate }}</button>
+			<button [disabled]="!formUser.valid" type="submit" class="btn btn-primary">{{ 'update' | translate }}</button>
 		</div>
 	</form>
 </div>
