chore: Remove commented code in indexUser.component.html

--- a/src/app/views/settings/users/index/indexUser.component.html
+++ b/src/app/views/settings/users/index/indexUser.component.html
@@ -30,7 +30,7 @@
 						<td>
 							<div class="d-flex flex-row">
 								<a class="btn btn-sm btn-primary me-2" routerLink="/settings/users/edit/{{ user.id }}">{{ 'edit' | translate }} <i class="bi bi-pencil-square"></i></a>
-								<a class="btn btn-sm btn-light me-2" routerLink="/settings/users/show/{{ user.id }}">{{ 'show' | translate }} <i class="bi bi-eye"></i></a>
+								<!--<a class="btn btn-sm btn-light me-2" routerLink="/settings/users/show/{{ user.id }}">{{ 'show' | translate }} <i class="bi bi-eye"></i></a>-->
 								<button class="btn btn-sm btn-danger" (click)="deleteUser(user.id)">{{ 'delete' | translate }}<i class="bi bi-trash"></i></button>
 							</div>
 						</td>
