chore: Update change-password component to enable form submission only when valid

--- a/src/app/views/account/change-password/change-password.component.html
+++ b/src/app/views/account/change-password/change-password.component.html
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 
-					<button type="submit" class="btn btn-primary">{{'update' | translate}}</button>
+					<button [disabled]="!formChangePassword.valid" type="submit" class="btn btn-primary">{{'update' | translate}}</button>
 				</form>
 			</div>
 		</div>
